# SHOUX

./: .gitignore  README.md  analisis_final_expertos.xlsx  pyproject.toml
example/: latent_factors.txt
src/demos/: utils.py
src/demos/Iris/: snnCreate.py  snn_iris_model.pth  snn_pop_model.pth  test.py
src/demos/Iris/results/: test_results.txt
src/demos/siameseSNN/: SNNvsDNN.py  better_k.py  classes.py  evaluate_rmse.py  example.py  graphs.py  k-neighbors.py  k_neighbors.py  prepareDS.py  road.py  siameseCreator.py  siameseTest.py  snnBackbone.py  testBackbone.py  trad_vs_snn.py  train_hierarchical.py  visualizer.py
src/demos/siameseSNN/models/: snn_audio_last.pt
src/demos/siameseSNN/models_creator/: siameseCreator.py  snnBackbone.py  testBackbone.py
src/demos/siameseSNN/results/: benchmark_detallado.txt  biological_pathway_results.txt  output_final.txt  siamese_explainability_report.txt
src/demos/siameseSNN/utils/: siamesetoimage.py  snntoimage.py
