[project]
name = "doctorado"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "datasets>=4.6.0",
    "fastdtw>=0.3.4",
    "librosa>=0.11.0",
    "matplotlib>=3.10.8",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "pywavelets>=1.9.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "snntorch>=0.9.4",
    "soundfile>=0.13.1",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "torchcodec>=0.10.0",
    "tqdm>=4.67.3",
    "transformers>=5.2.0",
]
