[project]
name = "shoux"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.2",
    "pywavelets>=1.9.0",
    "scikit-learn>=1.8.0",
    "snntorch>=0.9.4",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "torchcodec>=0.10.0",
    "tqdm>=4.67.3",
]
